# MiniEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
.github/workflows/: cmake.yml
engine/: CMakeLists.txt
engine/editor/: CMakeLists.txt
engine/editor/asset/global/: rendering_global.json
engine/editor/asset/scene/: 2.mtl
engine/editor/asset/scene/staircase/textures/.mayaSwatches/: wood5.jpg_hcm.swatch
engine/editor/asset/world/: hello_world.json
engine/editor/config/: editor.ini
engine/editor/demo/avocado/: avocado.mtl
engine/editor/demo/cornell-box/: cornell-box.mtl  cornell-box.xml
engine/editor/demo/cornell-box/.mayaSwatches/: cornell-box.mb.swatches
engine/editor/demo/fruit/: fruit.mtl
engine/editor/demo/moss/: moss.mtl  moss.xml
engine/editor/demo/staircase/: staircase.mb  staircase.xml
engine/editor/demo/staircase/.mayaSwatches/: staircase.mb.swatches
engine/editor/demo/staircase/textures/.mayaSwatches/: Tiles.jpg_hcm.swatch
engine/editor/demo/veach-mis/: veach-mis.xml
engine/editor/include/: axis.h  editor.h  editor_file_system.h  editor_global_context.h  editor_input_manager.h  editor_scene_manager.h  editor_ui.h  shader.h
engine/editor/shader/glsl/: lit.frag  lit.vert  test.frag  unlit.frag  unlit.vert
engine/editor/source/: axis.cpp  editor.cpp  editor_file_system.cpp  editor_global_context.cpp  editor_input_manager.cpp  editor_scene_manager.cpp  editor_ui.cpp  main.bak  main.basic  main.cpp  main.imgui
engine/editor/src/: main.cpp
engine/parser/: CMakeLists.txt  README.md
engine/parser/parser/generator/: reflection_generator.cpp  serializer_generator.cpp
engine/parser/parser/language_types/: class.cpp  field.cpp
engine/parser/parser/parser/: parser.h
engine/parser/parser/template_manager/: template_manager.cpp
engine/parser/precompile/: precompile.cmake  precompile.json.in
engine/parser/template/: allReflectionFile.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
engine/runtime/: CMakeLists.txt
engine/runtime/core/base/: hash.h  macro.h
engine/runtime/core/color/: color.h
engine/runtime/core/log/: log_system.cpp  log_system.h
engine/runtime/core/math/: axis_aligned.cpp  axis_aligned.h  math.cpp  math.h  math_headers.h  math_marcos.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h  random.h  transform.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
engine/runtime/core/meta/: meta_example.cpp  meta_example.h
engine/runtime/core/meta/reflection/: reflection.cpp  reflection.h  reflection_register.cpp  reflection_register.h
engine/runtime/core/meta/serializer/: serializer.cpp  serializer.h
engine/runtime/engine/: engine.cpp  engine.h
engine/runtime/function/framework/component/: component.h
engine/runtime/function/framework/component/mesh/: mesh_component.cpp  mesh_component.h  raw_mesh.h
engine/runtime/function/framework/component/transform/: transform_component.cpp  transform_component.h
engine/runtime/function/framework/object/: object.cpp  object.h  object_id_allocator.cpp  object_id_allocator.h
engine/runtime/function/framework/scene/: scene.cpp  scene.h
engine/runtime/function/framework/world/: world_manager.cpp  world_manager.h
engine/runtime/function/global/: global_contex.cpp  global_contex.h  global_context.cpp  global_context.h
engine/runtime/function/input/: input_system.cpp  input_system.h
engine/runtime/function/render/: render_camera.cpp  render_camera.h  render_camera.h.back  render_canvas.h  render_common.h  render_entity.h  render_guid_allocator.h  render_mesh.h  render_model.h  render_object.h  render_resource.cpp  render_resource.h  render_scene.cpp  render_scene.h  render_shader.h  render_swap_context.cpp  render_swap_context.h  render_system.cpp  render_system.h  render_texture.h  render_type.h  temp_camera.h  window_system.cpp  window_system.h
engine/runtime/function/render/pathtracing/: box.h  camera.h  hittable.h  material.h  path_tracer.cpp  path_tracer.h  rectangle.h  sphere.h  util.h
engine/runtime/function/render/pathtracing/acc_struct/: aabb.h  bvh.h
engine/runtime/function/render/pathtracing/common/: box.h  camera.h  hittable.cpp  hittable.h  material.h  onb.h  pdf.h  ray.h  rectangle.h  sphere.h  triangle.h  util.h
engine/runtime/function/render/pathtracing/primitive/: box.h  rectangle.h  sphere.h  triangle.h
engine/runtime/function/render/rasterization/: hierarchy_zbuffer.cpp  hierarchy_zbuffer.h
engine/runtime/function/render/rasterization/transform/: transform.cpp  transform.h
engine/runtime/function/render/zbuffer/: hierarchy_zbuffer.cpp  hierarchy_zbuffer.h  scanline_zbuffer.cpp  scanline_zbuffer.h  transform.cpp  transform.h  zbuffer.cpp  zbuffer.h
engine/runtime/function/transform/: transform.cpp  transform.h
engine/runtime/function/ui/: window_ui.h
engine/runtime/platform/file_system/: file_system.cpp  file_system.h
engine/runtime/platform/path/: path.cpp  path.h
engine/runtime/resource/acc_struct/: octree.cpp  octree.h
engine/runtime/resource/asset_manager/: asset_manager.cpp  asset_manager.h
engine/runtime/resource/common/: model.h  object.h
engine/runtime/resource/component/: mesh.h  model.h  shader.h
engine/runtime/resource/config_manager/: config_manager.cpp  config_manager.h
engine/runtime/resource/res_type/common/: model.h  object.h  scene.h  world.h
engine/runtime/resource/res_type/component/: camera.h  mesh.h  shader.h
engine/runtime/resource/res_type/data/: camera_config.h  material.h  mesh_data.h
engine/runtime/resource/res_type/global/: global_rendering.h
engine/runtime/sdk/: compile_deps.cpp
scene/: README.md  cube.mtl  untitled.mtl
scene/cornell-box/: cornell-box.mtl  cornell-box.xml  untitled.mtl.mtl
scene/staircase/: staircase.xml  stairscase.mtl
scene/staircase/textures/.mayaSwatches/: Wallpaper.jpg_hcm.swatch
scene/veach-mis/: veach-mis.mb  veach-mis.mtl  veach-mis.xml
scene/veach-mis/.mayaSwatches/: veach-mis.mb.swatches
